--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "scripts": {
     "start": "npm run build && node dist/index.js",
-    "dev": "nodemon src/index.ts",
+    "dev": "nodemon --files src/index.ts",
     "build": "tsc"
   },
   "author": "Leonardo Archila",
